# moveit-pick-place-python

./: CMakeLists.txt  package.xml  readme.md
launch/: run_pick_place.launch  spawn_gen3_lite.launch
scripts/: main.py
