<?xml version="1.0"?>
<package format="2">
  <name>pick_place_python</name>
  <version>0.0.1</version>
  <description>The pick_place_python tutorial</description>
  <maintainer email="dabarov.aldiyar@gmail.com">
    Aldiyar Dabarov
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>shape_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>